# document-reports-mcp

./: DESIGN_LOGIC.md  QUICKSTART.md  README.md  claude_desktop_config.example.json  diagnose_api.py  pyproject.toml  requirements.txt  server_sse.py  server_stdio.py  start_server_claude.py  worldbank_dnr_mcp.py
docs/: DESIGN_LOGIC.md  NEW_API_ANALYSIS.md  STRUCTURE_GUIDE.md
worldbank_dnr_mcp/: __init__.py  core.py  factory.py  parsers.py
