[project]
name = "worldbank-dnr-mcp"
version = "1.0.0"
description = "A Model Context Protocol implementation for World Bank Documents & Reports API"
authors = [
    {name = "Namira Suniaprita", email = "namirasuniaprita07@gmail.com"}
]
dependencies = [
    "anthropic>=0.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "mcp>=0.1.0",
    "httpx>=0.28.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]
